# AsciiFlowQT

./: .clang-format  .gitignore  AsciiFlow.pro  CMakeLists.txt  README.md  about.ui  exportdialog.cpp  exportdialog.h  exportdialog.ui  format-code.sh  importdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qasciiart.cpp  qasciiart.h  resource.qrc
CMake/: DevClangFormat.cmake  DevClangTidy.cmake  GitVersion.cmake  OS.cmake
debian/: README.Debian  asciiflow-qt.install  asciiflow-qt.manpages  asciiflow-wx.install  asciiflow-wx.manpages  asciiflowqt.substvars  changelog  control  copyright  debhelper-build-stamp  files  libasciiflow-dev.install  libasciiflow.install  rules
debian/applications/: asciiflow-qt.desktop  asciiflow-wx.desktop
debian/asciiflowqt/DEBIAN/: control  md5sums
man/: AsciiFlowQT.txt  AsciiFlowWx.txt  CMakeLists.txt  asciiflowqt.1
src/: AsciiArtData.cpp  AsciiArtData.h  AsciiFlow.pro  CMakeLists.txt  ITool.cpp  ITool.h  ToolArrow.cpp  ToolArrow.h  ToolClass.cpp  ToolClass.h  ToolErase.cpp  ToolErase.h  ToolFreehand.cpp  ToolFreehand.h  ToolLine.cpp  ToolLine.h  ToolMove.cpp  ToolMove.h  ToolRectangle.cpp  ToolRectangle.h  ToolResize.cpp  ToolResize.h  ToolText.cpp  ToolText.h  about.cpp  about.h  about.ui  changepreferencesdialog.cpp  changepreferencesdialog.h  changepreferencesdialog.ui  exportdialog.cpp  exportdialog.h  exportdialog.ui  importdialog.cpp  importdialog.h  importdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+3 more)
src/Common/: AsciiArtData.cpp  CMakeLists.txt  IsPrint.cpp  Point.cpp  Rect.cpp  ToolArrow.cpp  ToolClass.cpp  ToolErase.cpp  ToolFreehand.cpp  ToolLine.cpp  ToolMove.cpp  ToolRectangle.cpp  ToolResize.cpp  ToolText.cpp
src/Common/include/AsciiFlowCommon/: AsciiArtData.h  ITool.h  IsPrint.h  KeyEvent.h  Point.h  Rect.h  ToolArrow.h  ToolClass.h  ToolErase.h  ToolFreehand.h  ToolLine.h  ToolMove.h  ToolRectangle.h  ToolResize.h  ToolText.h
src/Common/include/AsciiFlowCommon/ico/: About.png.xpm  Arrow.png.xpm  Class.png.xpm  Erase.png.xpm  Export.png.xpm  Freehand.png.xpm  Import.png.xpm  Line.png.xpm  Move.png.xpm  New.png.xpm  Prefs.png.xpm  Rectangle.png.xpm  Redo.png.xpm  Resize.png.xpm  Text.png.xpm  Undo.png.xpm  make_xpm.sh
src/Qt/: CMakeLists.txt  about.cpp  exportdialog.cpp  exportdialog.h  importdialog.cpp  importdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qasciiart.cpp  qasciiart.h  resource.qrc
src/Wx/: AboutDialog.cpp  AboutDialog.h  App.cpp  App.h  CMakeLists.txt  ExportDialog.cpp  ExportDialog.h  ImportDialog.cpp  ImportDialog.h  MainFrame.cpp  MainFrame.h  PreferencesDialog.cpp  PreferencesDialog.h  main.cpp  wxAsciiArt.cpp  wxAsciiArt.h
