IF(UNIX)
	OPTION(BUILD_MAN_PAGE "Build man page" ON)
	IF(BUILD_MAN_PAGE)
		ADD_CUSTOM_TARGET(man ALL)

		ADD_CUSTOM_COMMAND(
			TARGET man
			COMMAND cat ${CMAKE_CURRENT_SOURCE_DIR}/asciiflowqt.1 | gzip -9 > ${CMAKE_CURRENT_BINARY_DIR}/asciiflowqt.1.gz
			OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/asciiflowqt.1.gz
		)

		ADD_CUSTOM_COMMAND(
			TARGET man
			DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/asciiflowqt.1.gz
		)

		INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/asciiflowqt.1.gz DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)
	ENDIF(BUILD_MAN_PAGE)
ENDIF(UNIX)
